--- a/book/dasp/01_IR_Conv.ipynb
+++ b/book/dasp/01_IR_Conv.ipynb
@@ -175,9 +175,9 @@
     "\n",
     "Okay so now we are ready for the convolution. Recall the discrete-time convolution is given by the following equation:\n",
     "\n",
-    "$\\begin{equation}\n",
+    "$$\\begin{equation}\n",
     "y[n] = \\sum_{k} h[n-k] x[k]\n",
-    "\\end{equation}$\n",
+    "\\end{equation}$$\n",
     "\n",
     "where $y[n]$ is the convolved signal, and we recall that $h[n]$ is the impulse response, and $x[n]$ is the input signal. In general for an input $x[n]$ of length, $L$ samples, and an impulse response of length $M$ samples, then the total length of the output after the convolution will be $L+M-1$ samples. One way we can think of this convolution operation by firstly flipping the impulse response around $n=0$. For each value of $n$, we then shift this flipped impulse response by $n$, where it will begin to overlap with $x[k]$. We multiply the two signals and sum the result to get the value at y[n]. This is much easier to visualise, so let's do that instead! Because of the sort of brute force way we are doing this to visualize it, the following snippet of code may take about 10-20 seconds to run (at least on my machine)."
    ]
@@ -274,9 +274,9 @@
     "\n",
     "Instead of flipping the impulse response and shifting it, we could have alternatively flipped the input signal and shifted it through the impulse response. The reason we can do this is because of the commutative property the holds for the convolution:\n",
     "\n",
-    "$\\begin{equation}\n",
+    "$$\\begin{equation}\n",
     "y[n] = \\sum_{k} h[n-k] x[k] = \\sum_{k} x[n-k] h[k] \n",
-    "\\end{equation}$\n",
+    "\\end{equation}$$\n",
     "\n",
     "This is a really useful property and is worth remembering when interpreting how signals interact with each other.\n",
     "\n",
@@ -285,31 +285,31 @@
     "\n",
     "As opposed to doing the convolution by directly implementing the discrete-time convolution equation, we can also organise the samples of the impulse response into a convolution matrix (which has a toeplitz structure) and do a matrix-vector product with the input signal: \n",
     "\n",
-    "\\begin{equation}\n",
+    "$$\\begin{equation}\n",
     "\\mathbf{y} = \\mathbf{H}\\mathbf{x}\n",
-    "\\end{equation}\n",
+    "\\end{equation}$$\n",
     "\n",
     "where $\\mathbf{y}$ is the vector of output samples, $\\mathbf{H}$ is the convolution matrix, and $\\mathbf{x}$ is the vector of input samples. To see this explicitly, consider a simple example where the length of the IR, M = 3 and length of the input signal, L = 4:\n",
     "\n",
-    "$\\begin{equation}\n",
+    "$$\\begin{equation}\n",
     "\\begin{bmatrix} y[0] \\\\ y[1] \\\\ y[2] \\\\ y[3] \\\\ y[4] \\\\ y[5] \\end{bmatrix} = \\begin{bmatrix} h[0] & 0 & 0 & 0 \\\\ h[1] & h[0] & 0 & 0 \\\\ h[2] & h[1] & h[0] & 0 \\\\ 0 & h[2] & h[1] & h[0] \\\\ 0 & 0 & h[2] & h[1] \\\\ 0 & 0 & 0 & h[2] \\end{bmatrix} \\begin{bmatrix} x[0] \\\\ x[1] \\\\ x[2] \\\\ x[3] \\end{bmatrix} \n",
-    "\\end{equation}$\n",
+    "\\end{equation}$$\n",
     "\n",
     "We can think of this matrix-vector product in two ways:\n",
     "\n",
     "1. Inner products of each row of $\\mathbf{H}$ with the input, $\\mathbf{x}$. This in fact corresponds to the picture we previously illustrated, where the impulse response is flipped and continuously shifted over the input signal.\n",
     "\n",
-    "$\\begin{equation}\n",
+    "$$\\begin{equation}\n",
     "\\begin{bmatrix} y[0] \\\\ y[1] \\\\ y[2] \\\\ y[3] \\\\ y[4] \\\\ y[5] \\end{bmatrix} = \\begin{bmatrix} h[0] & 0 & 0 & 0  \\end{bmatrix} \\begin{bmatrix} x[0] \\\\ x[1] \\\\ x[2] \\\\ x[3] \\end{bmatrix}  + \\begin{bmatrix} h[1] & h[0] & 0 & 0 \\end{bmatrix} \\begin{bmatrix} x[0] \\\\ x[1] \\\\ x[2] \\\\ x[3] \\end{bmatrix}  + \\dots +  \\begin{bmatrix} 0 & 0 & 0 & h[2] \\end{bmatrix} \\begin{bmatrix} x[0] \\\\ x[1] \\\\ x[2] \\\\ x[3] \\end{bmatrix} \n",
-    "\\end{equation}$\n",
+    "\\end{equation}$$\n",
     "\n",
     "\n",
     "\n",
     "2. Linear combinations of the columns of $\\mathbf{H}$. Each column of $\\mathbf{H}$ corresponds to a shifted version of the impulse response. Hence we can think of the convolution as weighted combinations of shifted versions of the impulse response, where the weights are given by the values of the input samples.\n",
     "\n",
-    "$\\begin{equation}\n",
+    "$$\\begin{equation}\n",
     "\\begin{bmatrix} y[0] \\\\ y[1] \\\\ y[2] \\\\ y[3] \\\\ y[4] \\\\ y[5] \\end{bmatrix} = x[0] \\begin{bmatrix} h[0]  \\\\ h[1]  \\\\ h[2]  \\\\ 0  \\\\ 0 \\\\ 0  \\end{bmatrix}  + x[1] \\begin{bmatrix} 0 \\\\ h[0]  \\\\ h[1]  \\\\ h[2]  \\\\ 0  \\\\ 0  \\end{bmatrix} + \\dots + x[3] \\begin{bmatrix} 0\\\\ 0\\\\ 0\\\\ h[0]  \\\\ h[1]  \\\\ h[2]  \\end{bmatrix} \n",
-    "\\end{equation}$\n",
+    "\\end{equation}$$\n",
     "\n",
     "You can already see that this is pretty slow and inefficient as the matrix, $\\mathbf{H}$ can get very large, however it does give us some more insight into what we are doing when we perform a convolution. I will not attempt to do this here (it was too heavy for my machine), but if you are curious, you can use the [toeplitz](https://docs.scipy.org/doc/scipy-1.16.1/reference/generated/scipy.linalg.toeplitz.html) function in Python. "
    ]
