--- a/book/dasp/02_FIR_design.ipynb
+++ b/book/dasp/02_FIR_design.ipynb
@@ -104,15 +104,15 @@
     "\n",
     "In our notebook on frequency analysis of discrete-time signals, we briefly mentioned the [discrete-time Fourier transform (DTFT)](https://randyaliased.github.io/acspjbook/main/fundamental/07_DFT.html#discrete-time-fourier-transform-dtft) (note this is not the discrete Fourier transform (DFT)). For a discrete-time signal, $h[n]$, the DTFT was given by \n",
     "\n",
-    "$\\begin{align} \n",
+    "$$\\begin{align} \n",
     "\tH(f) &= \\sum\\limits_{n=-\\infty}^{\\infty}h[n]e^{-j \\frac{2 \\pi f}{f_s} n}\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "where $H(f)$ is the Fourier transform of $h[n]$ that is continuous in frequency, $f$, (Hz) (recall that $H(f)$ will be complex-valued) and $f_{s}$ is the sampling frequency (Hz). Note that we can equivalently write this in terms of the angular frequency (radians/second), $\\omega = 2 \\pi f$, but we will keep things in terms of frequency (Hz). And of course, we can also go the other way around, i.e., given $H(f)$, we can recover the discrete-time signal, $h[n]$ via the inverse DTFT:\n",
     "\n",
-    "$\\begin{align} \n",
+    "$$\\begin{align} \n",
     "\th[n] &= \\frac{1}{f_{s}} \\int\\limits_{-f_{s}/2}^{f_{s}/2}H(f)e^{j \\frac{2 \\pi f}{f_s} n}\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "This gives us a convenient starting point for designing digital filters. If it is that we have some ideal frequency response specified by $H(f)$, then we can obtain the filter coefficients in the time-domain by doing an inverse DTFT.\n",
     "\n",
@@ -121,10 +121,10 @@
     "\n",
     "Let's consider the design of a simple low-pass finite impulse response (FIR) filter, with an ideal frequency response as depicted in Fig. 1. This filter can be mathematically defined such that\n",
     "\n",
-    "$\\begin{equation}\n",
+    "$$\\begin{equation}\n",
     "H(f) = \\begin{cases} 1  & |f| \\leq f_{c}\\\\ \n",
     "                     0  & |f| > f_{c} \\end{cases}\n",
-    "\\end{equation}$\n",
+    "\\end{equation}$$\n",
     "\n",
     "where $f_{c}$ is the cut-off frequency in Hz, so that there is a \"pass-band gain\" of $1$ between $-f_{c}$ and $f_{c}$, and zero elsewhere, hence preserving the frequency content up to the cut-off frequency (thus a low-pass filter). Note that we are considering the entire double-sided spectrum that is symmetrical around $0$ Hz (see the [DFT notebook](https://randyaliased.github.io/acspjbook/main/fundamental/07_DFT.html) for a refresher on this).\n",
     "\n",
@@ -139,23 +139,24 @@
     "\n",
     "In order to get the **impulse response**, $h[n]$ corresponding to this filter, we use the inverse DTFT. I'm going to leave this as an exercise for you (you'll have to make use of [Euler's identity](https://randyaliased.github.io/acspjbook/main/fundamental/02_Complex_numbers.html#euler-s-identity)). If you've done it correctly, you should end up with the following expression:\n",
     "\n",
-    "$\\begin{equation}\n",
+    "$$\\begin{equation}\n",
     "h[n] = \\frac{1}{n \\pi} \\sin\\left(\\frac{2 \\pi f_{c} n}{f_{s}}\\right)\n",
-    "\\end{equation}$\n",
+    "\\end{equation}$$\n",
     "\n",
     "which holds for $n = -\\infty$ to $\\infty$, i.e., it is an infinite impulse response (IIR). A more convenient expression is to write $h[n]$ in terms of a sinc function (which we encountered when looking at [windows](https://randyaliased.github.io/acspjbook/main/fundamental/08_Windows.html#rectangular-boxcar-window)).\n",
     "\n",
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "h[n] &= \\frac{1}{n \\pi} \\sin\\left(\\frac{2 \\pi f_{c} n}{f_{s}}\\right) \\\\\n",
     "     &= 2 \\frac{f_{c}}{f_{s}} \\frac{\\sin\\left(\\frac{2 \\pi f_{c} n}{f_{s}}\\right)}{\\frac{2 \\pi f_{c} n}{f_{s}}} \\\\\n",
     "     &= 2 \\frac{f_{c}}{f_{s}}  \\text{sinc}\\left(\\frac{2 \\pi f_{c} n}{f_{s}}\\right)  \n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "where the unnormalized sinc function is defined as\n",
-    "$\\begin{equation}\n",
+    "\n",
+    "$$\\begin{equation}\n",
     "\\text{sinc}(x) = \\begin{cases} 1 \\hspace{1.6cm} x = 0 \\\\\n",
     "                        \\sin(x)/x \\hspace{0.5cm} x \\neq 0\\end{cases}\n",
-    "\\end{equation}$\n",
+    "\\end{equation}$$\n",
     "\n",
     "**Please keep in mind** that there is also a [normalized version of the sinc function](https://en.wikipedia.org/wiki/Sinc_function) which includes a factor of $\\pi$. Be very careful with this as different texts/programming languages may choose either version. For instance [the sinc function in Python](https://numpy.org/doc/stable/reference/generated/numpy.sinc.html) uses the normalized version.\n",
     "\n",
@@ -271,44 +272,44 @@
     "\n",
     "Hence a more mathematically elegant and general way to truncate the FIR filter is to multiply $h[n]$ by a [symmetrical window](https://randyaliased.github.io/acspjbook/main/fundamental/08_Windows.html#), $w[n]$. Hence a windowed FIR filter, $h_{w}[n]$ of order $P$ can be obtained as\n",
     "\n",
-    "$\\begin{equation}\n",
+    "$$\\begin{equation}\n",
     "h_{w}[n] = h[n] w[n] \\hspace{0.5cm} -P/2 \\leq n \\leq P/2\n",
-    "\\end{equation}$\n",
+    "\\end{equation}$$\n",
     "\n",
     "### Impact of windowing on the ideal low-pass filter\n",
     "\n",
     "The burning question at this point is how does truncating the FIR filter with the window affect the ideal low-pass characteristic? Well we can start to understand this by considering the DTFT of $h_{w}[n]$ which is given by\n",
     "\n",
-    "$\\begin{align} \n",
+    "$$\\begin{align} \n",
     "\tH_{w}(f) &= \\sum\\limits_{n=-\\infty}^{\\infty}h[n] w[n] e^{-j \\frac{2 \\pi f}{f_s} n}\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "This only holds for the limits of n between $-\\infty$ and $+\\infty$, whereas when we truncate we will have the finite set of samples between $-P/2 \\leq n \\leq P/2$. But let's continue with a bit of reasoning using the DTFT with infinite samples.\n",
     "\n",
     "Let's sidestep for a minute and recall what is perhaps one of the most important results in all of signal processing: the **convolution theorem**. This states that the Fourier transform of a convolution between two time-domain signals is equivalent to the product of their respective Fourier transforms. Considering our two signals, $h[n]$ and $w[n]$, mathematically this is expressed as:\n",
     "\n",
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "\\sum\\limits_{n=-\\infty}^{\\infty} (h[n] * w[n]) e^{-j \\frac{2 \\pi f}{f_s} n} &=  \\sum\\limits_{n=-\\infty}^{\\infty} h[n] e^{-j \\frac{2 \\pi f}{f_s} n} \\sum\\limits_{n=-\\infty}^{\\infty} w[n] e^{-j \\frac{2 \\pi f}{f_s} n} \\\\\n",
     "&= H(f) W(f)\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "where the operator $*$ represents a convolution. The **converse is also true** -- the Fourier transform of a product between two time-domain signals is equivalent to the convolution of their respective Fourier transforms, so that\n",
     "\n",
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "\\sum\\limits_{n=-\\infty}^{\\infty} (h[n] w[n]) e^{-j \\frac{2 \\pi f}{f_s} n} &=  \\sum\\limits_{n=-\\infty}^{\\infty} h[n] e^{-j \\frac{2 \\pi f}{f_s} n} * \\sum\\limits_{n=-\\infty}^{\\infty} w[n] e^{-j \\frac{2 \\pi f}{f_s} n} \\\\\n",
     "H_{w}(f) &= H(f) * W(f)\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "which tells us exactly how the windowing affects the ideal low-pass filter. In words, the frequency response of the windowed FIR filter will be the result of a convolution between the ideal low-pass filter and the frequency response of the window we use. Recall from the [notebook on convolution](https://randyaliased.github.io/acspjbook/main/dasp/01_IR_Conv.html) we visualized what a convolution looked like - one of the signals time-reversed and sliding over the other, multiplying both signals at each shift index and summing the result. The same thing is happening here except in the frequency domain. Hence the frequency response of the window is really critical for how the ideal low-pass filter will be affected. \n",
     "\n",
     "When we consider the finite set of samples between $-P/2 \\leq n \\leq P/2$, the only difference is that instead of the DTFT, we need to transition to the [discrete Fourier transform (DFT)](https://randyaliased.github.io/acspjbook/main/fundamental/07_DFT.html#discrete-fourier-transform-dft) and consider the spectrum sampled at $k f_{s}/N$ for $k = -P/2, -P/2 + 1, \\dots, 0, \\dots, P/2 - 1, P/2$, and where $N = P + 1$ is the total number of samples. Hence we will have the DFT of $h_{w}[n]$ as\n",
     "\n",
-    "$\\begin{align} \n",
+    "$$\\begin{align} \n",
     "\tH_{w}[k] &= \\sum\\limits_{n=-P/2}^{P/2}h_{w}[n] e^{-j \\frac{2 \\pi n k}{N}} \\\\\n",
     "             &= \\sum\\limits_{n=-P/2}^{P/2}h[n] w[n] e^{-j \\frac{2 \\pi n k}{N}} \\\\\n",
     "             &= \\sum\\limits_{n=-P/2}^{P/2}h[n] e^{-j \\frac{2 \\pi n k}{N}} * \\sum\\limits_{n=-P/2}^{P/2} w[n] e^{-j \\frac{2 \\pi n k}{N}} \\\\\n",
     "             &= H[k] * W[k]\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "Note that the convolutions here are between two sequences of complex numbers. \n",
     "\n",
@@ -523,37 +524,37 @@
     "\n",
     "Now that we've understood how to truncate the FIR filter with a window, the last issue we need to resolve is the acausal nature of the FIR filter. Let's consider a simple case of a 2nd order filter, where we have obtained the following 3 coefficients:\n",
     "\n",
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "h_{w}[-1] &= 0.2 \\\\ \n",
     "h_{w}[0] &= 0.5 \\\\\n",
     "h_{w}[1] &= 0.2  \n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "and we want to filter some input signal, $x[n]$, then the output, $y[n]$ is given by the following convolution\n",
     "\n",
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "y[n] &= \\sum_{k} x[n-k] h_{w}[k] \\\\\n",
     "     &= h_{w}[-1]x[n+1] +  h_{w}[0]x[n] + h_{w}[1]x[n-1] \\\\\n",
     "     & = 0.2 x[n+1] +  0.5 x[n] + 0.2 x[n-1]\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "When $n = 0$, we can observe that there will be a dependence on the value $x[1]$, i.e., the output is dependent upon an input that occurs in the future! This is why we consider this filter as **acausal** and cannot be implemented in practice.\n",
     "\n",
     "The simple way to make the filter **causal** is to simply delay it such that the output only depends on current and past samples. In this case, we can delay the filter by one sample so that:\n",
     "\n",
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "h_{w}[0] &= 0.2 \\\\ \n",
     "h_{w}[1] &= 0.5 \\\\\n",
     "h_{w}[2] &= 0.2  \n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "and hence \n",
     "\n",
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "y[n] &= \\sum_{k} x[n-k] h_{w}[k] \\\\\n",
     "     &= h_{w}[0]x[n] +  h_{w}[1]x[n-1] + h_{w}[2]x[n-2] \\\\\n",
     "     & = 0.2 x[n] +  0.5 x[n-1] + 0.2 x[n-2]\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "### Summarizing the Windowed-FIR design\n",
     "\n",
