--- a/book/dasp/03_FilteringSignals.ipynb
+++ b/book/dasp/03_FilteringSignals.ipynb
@@ -44,20 +44,21 @@
     "<br>\n",
     "\n",
     "We can obtain the output of this system by convolving $h[n]$ with $x[n]$ as follows:\n",
-    "$\\begin{align} \n",
+    "\n",
+    "$$\\begin{align} \n",
     "y[n] &= \\sum_{k=-\\infty}^{k=\\infty} h[k] x[n-k] \\\\\n",
     "      &= \\sum_{k=-\\infty}^{k=\\infty} h[k] e^{j \\omega (n-k) T_{s}}\\\\\n",
     "      &= \\sum_{k=-\\infty}^{k=\\infty} h[k] e^{j \\omega n T_{s}} e^{-j \\omega k T_{s}} \\\\\n",
     "      &= e^{j \\omega n T_{s}} \\underbrace{\\sum_{k=-\\infty}^{k=\\infty} h[k]  e^{-j \\omega k T_{s}}}_{H(e^{j\\omega T_s}) \\text{: DTFT of } h[n]}\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "where we recognize that the input, $e^{j \\omega n T_{s}}$ is simply multiplied by the discrete-time Fourier transform (DTFT) of the impulse response of the LTI system, $h[n]$ (i.e., the transfer function of the LTI system). And because we can express the transfer function in terms of its magnitude and phase, we can express the output of the system as:\n",
     "\n",
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "y[n] &= H(e^{j \\omega T_{s}})  \\hspace{0.1cm} e^{j \\omega n T_{s}} \\\\\n",
     "     &= |H(e^{j \\omega T_{s}})| \\hspace{0.1cm} e^{j\\phi_{H}} \\hspace{0.1cm} e^{j \\omega n T_{s}} \\\\\n",
     "     &= |H(e^{j \\omega T_{s}})| \\hspace{0.1cm} \\hspace{0.1cm} e^{j (\\omega n T_{s}+\\phi_{H})}\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "where $|H(e^{j \\omega T_{s}})|$ is the magnitude of $H(e^{j \\omega T_{s}})$ and $\\phi_{H}$ is its phase. \n",
     "\n",
@@ -68,16 +69,16 @@
     "\n",
     "Let's consider now the discrete-time input, $x[n] = \\cos(\\omega n T_s)$. Recall that this can simply be expressed as a sum of complex exponentials using Euler's identity:\n",
     "\n",
-    "$\\begin{equation}\n",
+    "$$\\begin{equation}\n",
     "\\cos(\\omega n T_s) = \\frac{1}{2}\\left(e^{j\\omega n T_s} + e^{-j\\omega n T_s}\\right)\n",
-    "\\end{equation}$\n",
+    "\\end{equation}$$\n",
     "\n",
     "Using the previous derived result for complex exponentials, it is straightforward to show that the output of the LTI system is given by\n",
     "\n",
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "y[n] &= H(e^{j \\omega T_{s}})  \\hspace{0.1cm} \\cos(\\omega n T_s) \\\\\n",
     "     &= |H(e^{j \\omega T_{s}})| \\hspace{0.1cm} \\cos(\\omega n T_s+\\phi_{H})\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "This is a pretty remarkable result as it shows that a cosine is also produced at the output, except that (i) it has been scaled by the magnitude of the LTI system frequency response and (ii) it’s phase has changed by the phase of the LTI system frequency response. And that's essentially all we are doing when we are filtering audio signals! Simply modifying the magnitude and phase at different frequencies according to the transfer function of the LTI system. \n",
     "\n",
