--- a/book/fundamental/02_Complex_numbers.ipynb
+++ b/book/fundamental/02_Complex_numbers.ipynb
@@ -99,8 +99,6 @@
     "\n",
     "#### Multiplication\n",
     "\n",
-    "Recall that $j^{2} = -1$! \n",
-    "\n",
     "$$\\begin{align}\n",
     "z_{1} \\cdot z_{2} &= (a + jb) \\cdot (c + jd) \\nonumber \\\\\n",
     "                  &= a(c + jd) + jb(c+jd) \\nonumber \\\\\n",
@@ -535,7 +533,8 @@
     "The complex conjugate of a complex number,$z$, is another complex number which has an identical real part but the opposite sign for the imaginary part. In terms of our graphical representation, the complex conjugate is another vector with the same length as $z$ but reflected across the real axes. The complex conjugate of $z$ is denoted as $z^{*}$ and is defined as \n",
     "\n",
     "$$\\begin{align}\n",
-    "\\text{for a complex number } z &= a + jb, \\text{its complex conjugate}, z^{*} =  a -jb\n",
+    "\\text{for a complex number } z &= a + jb, \\\\\n",
+    "\\text{its complex conjugate}, z^{*} &=  a -jb\n",
     "\\end{align}$$\n",
     "\n",
     "#### Graphical understanding\n",
