--- a/book/fundamental/05_Fourier_Transform.ipynb
+++ b/book/fundamental/05_Fourier_Transform.ipynb
@@ -50,12 +50,12 @@
     "\n",
     "Let's start by considering the Fourier series of the periodic signal, $f(t)$, illustrated in Fig. 1. This is a pulse-train type signal with period T_{o} and can be mathematically represented as \n",
     "\n",
-    "$\\begin{equation}\n",
+    "$$\\begin{equation}\n",
     "f(t) = \\begin{cases}\n",
     " 1 & -T_{p} < t \\leq T_{p} \\\\\n",
     " 0 & T_{p} < t \\leq T_{o}/2 \\\\\n",
     " \\end{cases}\n",
-    "\\end{equation}$\n",
+    "\\end{equation}$$\n",
     "\n",
     "<div>\n",
     "<center> <img src=\"pulse_wave.png\" width=\"600\"/> <center/>\n",
@@ -66,16 +66,16 @@
     "\n",
     "Let's compute the coefficients of the Fourier series using the complex exponential form. Recall the formula to find the coefficients $c_n$:\n",
     "\n",
-    "$\\begin{equation} \n",
+    "$$\\begin{equation} \n",
     "\tc_n =\\frac{1}{T_o}\\int_{-T_o/2}^{T_o/2}f(t)e^{-jn\\omega_o t}\\text{d}t\n",
-    "\\end{equation}$\n",
+    "\\end{equation}$$\n",
     "\n",
     "After working through is integral (your homework), we find that the coefficients $c_n$ are given by (note that $c_n$ has no imaginary parts, only real values):\n",
     "\n",
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "c_o &= \\frac{2  T_{p} } { T_o}\\\\\n",
     "c_n &= \\frac{2 \\sin(n\\omega_{o} T_{p}) } {n \\omega_{o} T_o} & n \\neq 0\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "Let's plot the values of the $c_n$ coefficients against angular frequency when $T_p = 0.5$ and $T_o = 2$. This is the amplitude spectrum of our signal, $f(t)$ and is shown in Fig. 2. It tells us something about how the strength of the sinusoids is distributed across frequency. (In general, $c_n$ is complex-valued, and in that case we tend to plot two things - the magnitude spectrum and the phase spectrum, i.e., the magnitude and phase of $c_n$ against frequency). \n",
     "\n",
@@ -237,21 +237,22 @@
     "\n",
     "Okay so we have set $T_{o} \\rightarrow \\infty$. What consequences does this have on the math for computing the coefficients, $c_n$ from the Fourier series analysis equation? Recall the formula for $c_n$:\n",
     "\n",
-    "$\\begin{equation} \n",
+    "$$\\begin{equation} \n",
     "\tc_n =\\frac{1}{T_o}\\int_{-T_o/2}^{T_o/2}f(t)e^{-jn\\omega_o t}\\text{d}t\n",
-    "\\end{equation}$\n",
+    "\\end{equation}$$\n",
     "\n",
     "The first thing we can observe is that the limits of the integral will change. We can also multiply out by $T_o$ to simplify things a bit:\n",
     "\n",
-    "$\\begin{align} \n",
+    "$$\\begin{align} \n",
     "\t\\lim_{T_o \\rightarrow \\infty} c_n &=\\frac{1}{T_o}\\int_{-\\infty}^{\\infty}f(t)e^{-jn\\omega_o t}\\text{d}t \\\\\n",
     "\t\\lim_{T_o \\rightarrow \\infty} T_o c_n &=\\int_{-\\infty}^{\\infty}f(t)e^{-jn\\omega_o t}\\text{d}t\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "Now recall that $\\omega_o = 2\\pi/T_o$, which means that\n",
-    "$\\begin{align} \n",
+    "\n",
+    "$$\\begin{align} \n",
     "\t\\lim_{T_o \\rightarrow \\infty} \\omega_o &= \\frac{2\\pi}{T_o} = 0  \n",
-    "\t\\end{align}$\n",
+    "\t\\end{align}$$\n",
     "\n",
     "That all feels really weird, but here is the key - in the Fourier Series, **the spacing between the discrete frequencies is also $\\omega_o$ (shown in Fig. 3) and hence the spacing between these discrete frequencies decreases**, i.e. it also tends to 0.\n",
     "\n",
@@ -420,14 +421,15 @@
     "\n",
     "We essentially have gone from a discrete spectrum to a continuous one, i.e, as $T_o \\rightarrow \\infty$, $n \\omega_o \\rightarrow \\omega$. This now means we can accommodate for any frequency! No longer are we constrained to integer multiples of $\\omega_o$. Returning to the math, what we end up with is\n",
     "\n",
-    "$\\begin{align} \n",
+    "$$\\begin{align} \n",
     "\t\\lim_{T_o \\rightarrow \\infty} T_o c_n &=\\int_{-\\infty}^{\\infty}f(t)e^{-j\\omega t}\\text{d}t\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "This integral is what we call the **Fourier transform**! Conventionally, we write it as follows\n",
-    "$\\begin{align} \n",
+    "\n",
+    "$$\\begin{align} \n",
     "\tF(j \\omega) &=\\int_{-\\infty}^{\\infty}f(t)e^{-j\\omega t}\\text{d}t\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "It's still an audio analysis equation, i.e., it takes an input of the time-domain signal, $f(t)$ and spits out a complex number, $F(j\\omega)$ for each value of $\\omega$, i.e., at all frequencies along a continuum (recall that $\\omega = 2 \\pi f$, where $f$ is the frequency in Hz). This allows us to quantify the magnitude and phase of our signal across frequency. Just as in the Fourier series, we can interpret this integral as computing a correlation between the signal $f(t)$ and a complex exponential, but now at any frequency $\\omega$. \n",
     "\n",
@@ -435,22 +437,24 @@
     "\n",
     "We can also go the other way around and do synthesis if we have $F(j\\omega)$. This is what we call the **inverse Fourier transform** and is given by\n",
     "\n",
-    "$\\begin{align} \n",
+    "$$\\begin{align} \n",
     "\tf(t) &= \\frac{1}{2\\pi} \\int_{-\\infty}^{\\infty}F(j\\omega) e^{j  \\omega \\color{black}t}\\text{d}\\omega\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "### An example\n",
     "\n",
     "Let's go through an example to get a feel for how the Fourier transform works. Let's consider a decaying exponential signat, $f(t)$, which is defined as\n",
-    "$\\begin{equation}\n",
+    "\n",
+    "$$\\begin{equation}\n",
     "\tf(t) = \\begin{cases}\n",
     "\t\t0 & t < 0 \\\\\n",
     "\t\t\te^{-at} & t\\ge0\n",
     "\t\\end{cases}\n",
-    "\\end{equation}$\n",
+    "\\end{equation}$$\n",
     "\n",
     "To obtain the Fourier transform of this signal, we simply apply the Fourier transform analysis formula as and go through the integration: \n",
-    "$\\begin{align}\n",
+    "\n",
+    "$$\\begin{align}\n",
     "    F(j\\omega) &= \\int_{-\\infty}^\\infty f(t)e^{-j\\omega t}\\,\\textrm{d}t\\\\\n",
     "    &= \\int_0^\\infty e^{-at}e^{-j\\omega t}\\,\\textrm{d}t\\\\\n",
     "    &= \\int_0^\\infty e^{-(a+j\\omega)t}\\,\\textrm{d}t\\\\\n",
@@ -458,7 +462,7 @@
     "    &= \\frac{1}{a+j\\omega}\\\\\n",
     "    &= \\frac{1}{a+j\\omega}\\cdot\\frac{a-j\\omega}{a-j\\omega}\\\\\n",
     "    &= \\frac{a}{a^2+\\omega^{2}} - j \\frac{\\omega}{a^2+\\omega^{2}}\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "We have now two domains in which we can fully analyze the signal - time time domain (a function of $t$) and the frequency domain, a function of $\\omega$. As we can observe, $F(j\\omega)$ is indeed a complex number. This means that we can obtain both the magnitude (absolute value of the complex number) and the phase (argument of the complex number) for any frequency, $\\omega$. Let's plot this below and see how the magnitude and phase changes as we vary the parameter $a$."
    ]
