--- a/book/fundamental/06_Sampling.ipynb
+++ b/book/fundamental/06_Sampling.ipynb
@@ -83,9 +83,11 @@
     "Now that we have the general analog to digital audio conversion process in mind, let's go into more detail on the time discretization aspect, which we refer to as **sampling**. The key factor to consider in sampling is the **sampling frequency** (also called sample rate), which we will denote as $f_{s}$ and has the units of Hz (or 1/seconds). This corresponds to how fast we are opening and closing that \"switch\" to take snapshots of the signal, i.e., the number of times the switch closes per second, hence the unit of Hz. We refer to the time period in between the discrete time samples as the **sampling period**, $T_{s}$ with units of seconds. The sampling frequency and sampling period are therefore related by the formula,  $f_{s} = 1/T_{s}$.\n",
     "\n",
     "In continuous-time, we mathematically represented signals as $y(t)$, a function of continuous time, $t$. With discrete-time signals, we need to change this representation. A simple way to do this to substitute $t = n.T_{s}$ for $n = 0, 1, 2, \\dots$. With a fixed value of $T_s$, $n.T_{s}$ for $n = 0, 1, 2, \\dots$ defines a number of discrete time instance for which we will have the corresponding amplitude values. As $T_{s}$ notation is a bit cumbersome to carry around, this is dropped in much of the literature, and the discrete-time signal is simply represented as $y[n]$ for $n = 0, 1, 2, \\dots$, with the $T_s$ understood. In summary, our mathematical representation for discrete-time signals is (with a known $f_s$ or $T_s$):\n",
-    "$\\begin{align}\n",
+    "\n",
+    "$$\\begin{align}\n",
     "y(t) &\\rightarrow y[n.T_{s}] \\rightarrow y[n] \\hspace{0.3cm} \\text{for} \\hspace{0.1cm} n = 0, 1, 2, \\dots\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
+    "\n",
     "Note our use of square brackets for the discrete-time signals, a common way to distinguish continuous-time and discrete-time signals.\n",
     "\n",
     "Let's consider a simple sinusoid of 100 Hz as our continuous-time signal, and change $T_s$ to see the impact on what the discrete representation of the signal looks like. In the plot below the red signal represents the continuous-time signal and the blue dots represent the discrete-time version of the signal. "
@@ -400,10 +402,10 @@
     "\n",
     "Let's mathematically define that. Recall that the bandwidth of our signal is given by $B$. If we observe the first set of frequency replicas around $f_s$, we can represent the lowest frequency in that set as $f_s - B$. In the figure, this is the frequency of the first component (\"arrow\") that you see above $B$ (i.e., the 75 Hz component of the continuous-time signal). The overlap of these two components occurs when:\n",
     "\n",
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "f_s - B &<= B \\\\\n",
     "    f_s &<= 2B\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "This is why in the whistle example with $f_s = 3$ kHz, as the bandwidth of the whistle was changing from $B ~= 1.5$ kHz to $B ~= 2$ kHz, the aliased component $f_s - B$ (ranging from $1.5$ kHz to $1$ kHz) is what we heard instead. This formulation also makes it evident why the Nyquist-Shannon thereom requires that $fs \\geq 2B$, i.e., the sampling frequency must be greater than or equal to the bandwidth of the continuous-time signal.\n"
    ]
