--- a/book/fundamental/07_DFT.ipynb
+++ b/book/fundamental/07_DFT.ipynb
@@ -60,9 +60,9 @@
     "\n",
     "Let's recall the Fourier transform analysis equation for continuous-time signals. Instead of writing it in terms of $\\omega$ as we did [before](https://randyaliased.github.io/acspjbook/main/fundamental/05_Fourier_Transform.html), we'll express it directly in terms of the frequency $f$ in Hz by substituting $\\omega = 2 \\pi f$:\n",
     "\n",
-    "$\\begin{align} \n",
+    "$$\\begin{align} \n",
     "\tX(f) &=\\int_{-\\infty}^{\\infty}x(t)e^{-j 2 \\pi f t}\\text{d}t\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "Now that we are dealing with discrete-time signals, there are a few modifications to be made to this formula:\n",
     "1. The continuous-time variable, $t$, is to be replaced with the discretised version, $n T_s$, where $T_s$ is the sampling period for $n = 0, 1, 2, \\dots$. \n",
@@ -70,9 +70,9 @@
     "\n",
     "This leads us to the **discrete-time Fourier transform (DTFT)**:\n",
     "\n",
-    "$\\begin{align} \n",
+    "$$\\begin{align} \n",
     "\tX(f) &=\\sum\\limits_{n=-\\infty}^{\\infty}x(nT_s)e^{-j 2 \\pi f n T_s} = \\sum\\limits_{n=-\\infty}^{\\infty}x[n]e^{-j 2 \\pi f n T_s} = \\sum\\limits_{n=-\\infty}^{\\infty}x[n]e^{-j \\frac{2 \\pi f}{f_s} n}\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "In the last equation, we simply substituted $T_s = 1/f_s$, where $f_s$ is the sampling frequency. In some literature, you will find the term $\\Omega = (2 \\pi f)/(f_s)$ being used, which is simply a normalized angular frequency (sometimes called a digital frequency) which ranges from $0$ to $2 \\pi$. Note in these equations that we have also omitted the $dt$ variable. In the discrete-time domain, this corresponds to $T_s$ and hence only contributes to a scaling, but we'll come back to that later. In any case, we have a version of the Fourier transform that can analyze discrete-time signals. It is, however, of limited use in practice since the left-hand-side of the equation is still continuous in terms of frequency, $f$, i.e., we can obtain the Fourier coefficients at any frequency, f. While that may seem advantageous, as we want to be able to process our signals with computers, it will be more convenient to have a discrete form of the spectrum as well, which carries us over into the **discrete Fourier transform (DFT)**.\n",
     "\n",
@@ -85,31 +85,32 @@
     "\n",
     "This results in\n",
     "\n",
-    "$\\begin{align} \n",
+    "$$\\begin{align} \n",
     "\tX[k \\Delta f] &= \\sum\\limits_{n=0}^{N-1}x[n]e^{-j 2 \\pi k \\Delta f n T_s} \n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "Let's pause for a second and make sure we understand this. If our signal contained $N=1000$ samples and we were to choose $\\Delta f = 10$ Hz, then the values of $k = 0, 1, 2, … N-1$ would correspond to the discrete frequencies $\\{0, 10, 20, \\dots 9990\\}$ Hz, and these are the frequencies at which we would obtain the complex values of the Fourier coefficients (the result of the summation). The integer values of $k$ are commonly referred to as **frequency bins**. \n",
     "\n",
     "We, however, cannot typically just choose values for $\\Delta f$ as they are constrained by the following relationship, i.e., $\\Delta f$ is fixed for some given $f_s$ and $N$:\n",
     "\n",
-    "$\\begin{equation}\n",
+    "$$\\begin{equation}\n",
     "\\Delta f \\hspace{0.1cm} T_s = \\frac{1}{N}  \\rightarrow \\Delta f  = \\frac{f_s}{N}\n",
-    "\\end{equation}$\n",
+    "\\end{equation}$$\n",
     "\n",
     "Substitution of this expression into the previous equation finally brings us to the discrete Fourier transform (DFT) analysis equation:\n",
-    "$\\begin{align} \n",
+    "\n",
+    "$$\\begin{align} \n",
     "\tX[k] &= \\sum\\limits_{n=0}^{N-1}x[n]e^{-j \\frac{2 \\pi}{N} k  n} \\\\\n",
     "         &= x[0] + x[1]e^{-j \\frac{2 \\pi k}{N}} + x[1]e^{-j \\frac{2 \\pi k}{N} 2} + \\dots + x[N-1]e^{-j \\frac{2 \\pi k}{N} (N-1)}\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "We have dropped the dependence on $\\Delta f$ on the left-hand-side as it is constant (similar to how we dropped $T_s$ for discrete-time signals). For each value of $k = 0, 1, 2, … N-1$ (for each corresponding frequency), we can interpret this equation as a sum of complex exponentials with normalized frequencies $(2 \\pi k)/N = (2 \\pi k \\Delta f)/f_s$, weighted by the values in $x[n]$ (amplitudes of the signal).  This results in a complex number for each frequency from which we can compute the magnitude and phase, and where the square of the magnitude tells use something about how much energy there is in the signal at that particular frequency. (I hope this is all starting to connect with everything we've done so far!).\n",
     "\n",
     "And of course, we also have the **inverse DFT** (synthesis equation), which for $n = 0, 1, 2, … N-1$, is given by (think about how this relates to the [Fourier series](https://randyaliased.github.io/acspjbook/main/fundamental/04_Fourier_Series.html))\n",
     "\n",
-    "$\\begin{align} \n",
+    "$$\\begin{align} \n",
     "\tx[n] &= \\frac{1}{N}\\sum\\limits_{k=0}^{N-1}X[k]e^{j \\frac{2 \\pi}{N} k  n} \\hspace{0.4 cm} \n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "Let's do a really simple example just to get an idea of how the DFT works."
    ]
@@ -181,9 +182,9 @@
     "\n",
     "Recall that we could not freely choose $\\Delta f$ and it was defined as  $\\Delta f = f_{s}/N$. Hence the corresponding frequency array for the DFT is given by\n",
     "\n",
-    "$\\begin{equation}\n",
+    "$$\\begin{equation}\n",
     "\\frac{k f_{s}}{N}, \\hspace{0.3cm} k = 0, 1, 2, \\dots N-1\n",
-    "\\end{equation}$\n",
+    "\\end{equation}$$\n",
     "\n",
     "which corresponds to frequencies from 0 Hz to $(f_{s}-df)$ Hz. \n",
     "\n",
@@ -310,9 +311,9 @@
     "\n",
     "For this arbitrary signal, the magnitude spectrum is not particularly interesting, but it does illustrate that there is some sort of symmetry which is tied to an inherent periodicity within the DFT. This is due to the complex exponential in the DFT, $e^{\\pm j \\frac{2 \\pi}{N} k  n}$ which is periodic every N samples, such that \n",
     "\n",
-    "$\\begin{equation}\n",
+    "$$\\begin{equation}\n",
     "x[n + N] = x [n];\\hspace{0.5cm} X[k+N] = X[k]\n",
-    "\\end{equation}$\n",
+    "\\end{equation}$$\n",
     "\n",
     "meaning that the time segment of $N$ samples and DFT coefficients, also of $N$ samples, are repeated from $-\\infty$ to $\\infty$ (a god exercise is to try and prove this with the DFT/inverse DFT formulas from above). This is why doing the DFT corresponds to doing a transform not only to a time segment of $N$ samples, but rather a repeated version of that time segment with period, $N$. This has important consequences when considering time windows (which we will briefly discuss in [time-frequency analysis](https://randyaliased.github.io/acspjbook/main/fundamental/08_Time_Freq_Analysis.html)).  \n",
     "\n",
@@ -399,15 +400,15 @@
     "\n",
     "For a continuous-time domain signal, $x(t)$, its mean-square value, ${x}_{ms}$, is a measure of its average power of some time, $T$ and is given by\n",
     "\n",
-    "$\\begin{equation}\n",
+    "$$\\begin{equation}\n",
     "{x}_{ms} = \\frac{1}{T} \\int_{0}^{T} x^{2}(t) dt\n",
-    "\\end{equation}$\n",
+    "\\end{equation}$$\n",
     "\n",
     "In order to mathematically define the PSD, we start with Parseval's theorem (or the more general [Plancherel_theorem](https://en.wikipedia.org/wiki/Plancherel_theorem) which establishes an energy equivalence in the time and frequency domains such that\n",
     "\n",
-    "$\\begin{equation}\n",
+    "$$\\begin{equation}\n",
     "\\int_{-\\infty}^{\\infty} x^{2}(t) dt = \\int_{-\\infty}^{\\infty} |X(f)^{2}| df \n",
-    "\\end{equation}$\n",
+    "\\end{equation}$$\n",
     "\n",
     "where $|X(f)|$ is the magnitude of the Fourier transform of the continuous-time signal, $x(t)$. \n",
     "\n",
@@ -415,15 +416,15 @@
     "\n",
     "We now need to make this equivalence for discrete-time signals and using the DFT. But before we do that, we need to revisit our previous DFT and inverse DFT definitions. The definitions that have been previously presented are quite standard and is what you will find in many classic digital signal processing books (e.g., {cite:p}`Oppenheim2009`). These definitions are in fact so standard that they are the exact formulations implemented in the fft routines of Python and Matlab. However, we need to be attentive to scalings to ensure that we preserve the energy equivalence in the time and frequency domain. Recall that when we were deriving the DFT, we left out the differential, $dt$ from the integral of the continuous-time Fourier transform. This is an important scaling, and we need to include it in order to get to the correct PSD definition. So let's define an alternative version of the DFT analysis equation that accounts for $dt$. We use an alternative symbol, $\\tilde{X}[k]$, and refer to this quantity as the **linear spectrum**, defined as\n",
     "\n",
-    "$\\begin{align} \n",
+    "$$\\begin{align} \n",
     "\t\\tilde{X}[k] &= \\sum\\limits_{n=0}^{N-1}x[n]e^{-j \\frac{2 \\pi}{N} k  n} \\hspace{0.2cm} \\Delta t\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "where $\\Delta t = T_s$ is sampling period (we've used $\\Delta t$ as opposed to $T_s$ so as to not confuse the variable $T_s$ with $T$). Note that if you wanted to compute this quantity in Python, you must multiply the output of the np.fft.fft function by $\\Delta t$. If you were to compute the linear spectrum of a signal, then to recover the time-domain signal, the appropriate scalings will also need to be incorporated and the inverse DFT becomes\n",
     "\n",
-    "$\\begin{align} \n",
+    "$$\\begin{align} \n",
     "\tx[n] &= \\sum\\limits_{k=0}^{N-1} \\tilde{X}[k] e^{j \\frac{2 \\pi}{N} k  n} \\hspace{0.2cm} \\Delta f\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "Again note here that in Python, the np.fft.ifft function implements the previously defined inverse DFT formulation with the $1/N$ scaling. Hence if we were using the np.fft.ifft function with the linear spectrum as defined above, we will need to multiply by $N$ and by $\\Delta f$.\n",
     "\n",
@@ -431,50 +432,50 @@
     "\n",
     "Okay that was a slight digression, but an important one. In cases when we want accurate quantities, we need to always be attentive to scalings that can skew our answers. With the linear spectrum and its inverse defined, let's continue with our derivation of the PSD. Following from the previous energy equivalence definition, the discrete-time equivalent of Parseval's theorem for a finite-length discrete-time signal, $x[n]$ with $N$ samples is given by\n",
     "\n",
-    "$\\begin{equation}\n",
+    "$$\\begin{equation}\n",
     "\\sum \\limits_{n=0}^{N-1} x^{2}[n] \\hspace{0.1cm} \\Delta t = \\sum \\limits_{k=0}^{N-1} |\\tilde{X}[k]^{2}| \\hspace{0.1cm} \\Delta f \n",
-    "\\end{equation}$\n",
+    "\\end{equation}$$\n",
     "\n",
     "where we note that the linear spectrum, $\\tilde{X}[k]$ is on the right-hand-side. And the corresponding mean-square of $x[n]$ becomes\n",
     "\n",
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "{x}_{ms} = \\frac{1}{T} \\int_{0}^{T} x^{2}(t) dt \\rightarrow \\frac{1}{T} \\sum \\limits_{n=0}^{N-1} x^{2}[n] \\hspace{0.1cm} \\Delta t &= \\frac{1}{N \\Delta t} \\sum \\limits_{n=0}^{N-1} x^{2}[n] \\Delta t \\\\\n",
     "&= \\frac{1}{N} \\sum \\limits_{n=0}^{N-1} x^{2}[n] \n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "Let's now define the PSD. We denote the PSD by the variable $S_{xx}[k]$ (notation from {cite:p}`bendat2011random`) for $k = 0, 1, 2, \\dots N-1$, meaning that it is defined for all frequencies from $0$ Hz up to $f_s - \\Delta f$ Hz. As this definition includes the portion of the spectrum that is repeated, we refer to $S_{xx}[k]$ as the **double-sided PSD**. We define it such that we want its sum across all frequencies multiplied by $\\Delta f$ to be equal to the mean-square of the time-domain signal, $x[n]$:\n",
     "\n",
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "\\sum \\limits_{k=0}^{N-1} S_{xx}[k] \\hspace{0.1cm} \\Delta f &= \\frac{1}{N } \\sum \\limits_{n=0}^{N-1} x^{2}[n]\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "Substituting the discrete-time formulation of Parseval's theorem from above, we then obtain:\n",
     "\n",
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "\\sum \\limits_{k=0}^{N-1} S_{xx}[k] \\hspace{0.1cm} \\Delta f &= \\frac{1}{N } \\sum \\limits_{n=0}^{N-1} x^{2}[n]  \\\\\n",
     " &= \\frac{1}{N \\Delta t} \\sum \\limits_{k=0}^{N-1} |\\tilde{X}[k]^{2}| \\hspace{0.1cm} \\Delta f \\\\\n",
     "& = \\frac{1}{T} \\sum \\limits_{k=0}^{N-1} |\\tilde{X}[k]^{2}| \\hspace{0.1cm} \\Delta f \n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "and hence to ensure that the **energy equivalence in both the time and frequency domain is always preserved**, we define the double-sided PSD, $S_{xx}[k]$ as\n",
     "\n",
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "S_{xx}[k] \\hspace{0.1cm} &= \\frac{1}{T} |\\tilde{X}[k]^{2}|,  \\hspace{0.4cm} \\text{for} \\hspace{0.1cm} k = 0, 1, 2, \\dots, N-1\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "As we've seen before, due to the repetition of the spectrum, it's often more useful to work with a single-sided spectrum, hence we can also define a corresponding **single-sided PSD** which we denote as $G_{xx}[k]$. Recall that since it was only the DFT values for $k = 1, 2, \\dots (N/2 - 1)$ that were repeated, we need to compensate with a factor of 2. However the DFT values for $k=0$ and $k=N/2$ remain unchanged. Therefore we define the  single-sided PSD, $G_{xx}[k]$ as\n",
     "\n",
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "G_{xx}[k] \\hspace{0.1cm} &= \\begin{cases} \\frac{1}{T} |\\tilde{X}[k]^{2}|,  \\hspace{0.4cm} \\text{for} \\hspace{0.1cm} k = 0, N/2 \\\\ \n",
     " \\frac{2}{T} |\\tilde{X}[k]^{2}|,  \\hspace{0.4cm} \\text{for} \\hspace{0.1cm} k = 1, 2, \\dots, \\frac{N}{2}-1\n",
     "\\end{cases}\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "which also ensures the energy equivalence in the time and frequency domain such that\n",
     "\n",
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "\\sum \\limits_{k=0}^{N/2} G_{xx}[k] \\hspace{0.1cm} \\Delta f &= \\frac{1}{N } \\sum \\limits_{n=0}^{N-1} x^{2}[n]\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "This is a check always worth doing.\n",
     "\n",
@@ -483,9 +484,9 @@
     "\n",
     "It's important to observe the units of the PSD, that tells what quantity it is we are actually observing. Let's say that our signal, $x[n]$ has the units of volts (V), then from the linear spectrum\n",
     "\n",
-    "$\\begin{align} \n",
+    "$$\\begin{align} \n",
     "\t\\tilde{X}[k] &= \\sum\\limits_{n=0}^{N-1}x[n]e^{-j \\frac{2 \\pi}{N} k  n} \\hspace{0.2cm} \\Delta t\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "we can observe that the units of $\\tilde{X}[k]$ is $\\text{V} \\cdot \\text{s}$.\n",
     "\n",
@@ -495,10 +496,10 @@
     "\n",
     "Let's code this up to get a better understanding. We'll generate a simple sine wave and demonstrate that using the PSD, we can find the root-mean-square (RMS) of the sinusoid. The RMS of the signal in the time-domain is simply the square root of its mean square as previously defined. If we compute the single-sided PSD of the sine wave, we should expect $G_{xx}$ to have a large peak at one frequency (hence at some value of $k$). Let's denote this maximum as $G_{xx}[k_o]$, where $k_o$ is the value of $k$ corresponding to the maximum value in $G_{xx}$. Given our energy equivalence relationship embedded in the PSD, we can expect that the RMS value of the sine wave in the time and frequency domain is related by\n",
     "\n",
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "\\text{RMS of sine wave} = \\sqrt{\\frac{1}{N } \\sum \\limits_{n=0}^{N-1} x^{2}[n]} &= \\sqrt{\\sum \\limits_{k=0}^{N/2} G_{xx}[k] \\hspace{0.1cm} \\Delta f} \\\\\n",
     "                                                      &=\\sqrt{ G_{xx}[k_o] \\hspace{0.1cm} \\Delta f}\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "The interactive plot below allows you to span across amplitude and frequency of the sine wave to demonstrate that these relationships hold. This is really useful because for a noisy signal, by using the PSD, we can get a pretty good estimate of the RMS of any sinusoids embedded in the signal. On top of that, depending on the units of the recorded signal, the RMS value obtained can be physically meaningful corresponding to a voltage or acoustic pressure for instance.\n",
     "\n",
