--- a/book/fundamental/08_Windows.ipynb
+++ b/book/fundamental/08_Windows.ipynb
@@ -96,22 +96,23 @@
     "\n",
     "The left-hand side of Fig. 1 depicts a continuous-time rectangular window that is symmetrical around zero (this is simply for mathematical convenience in the following derivations) with a width of $T$ seconds and an amplitude of $1/T$ (note that this is a separate time variable $T$, not the sampling period, $T_s$!). An amplitude of $1/T$  is used as a opposed to $1$ to avoid a scaling in the frequency domain. Let's take the continuous-time Fourier transform of the rectangular window, and denote it as $W_{R}(f)$:\n",
     "\n",
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "W_{R}(f) &= \\int\\limits_{-T/2}^{T/2} \\frac{1}{T} e^{-j2\\pi ft} = \\frac{\\sin(\\pi f T)}{\\pi f T} = \\text{sinc}(\\pi f T) = \\text{sinc}\\left(\\frac{\\pi f}{\\Delta f}\\right)\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "where the sinc function (proncounced \"sink\") is defined as\n",
-    "$\\begin{equation}\n",
+    "\n",
+    "$$\\begin{equation}\n",
     "\\text{sinc}(x) = \\begin{cases} 1 \\hspace{1.6cm} x = 0 \\\\\n",
     "                        \\sin(x)/x \\hspace{0.5cm} x \\neq 0\\end{cases}\n",
-    "\\end{equation}$\n",
+    "\\end{equation}$$\n",
     "\n",
     "We have also used the relationship for a discrete-time signal where $T = N T_{s} = N/fs = 1/\\Delta f$. This spectrum is sketched in the right-hand side of Fig. 2. You should notice that the spectrum cuts the x-axis at several points, i.e., $W_{R}(f) = 0$ for several values of $f$. These frequencies, $f$, occur when $\\text{sinc}\\left(\\pi f/\\Delta f\\right) = 0$, and hence when $\\sin\\left(\\pi f/\\Delta f\\right) = 0$. This occurs when the argument of the sin function is equal to integer multiples of $\\pi$:\n",
     "\n",
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "\\left(\\frac{\\pi f}{\\Delta f}\\right)  &= \\pm k \\pi  \\hspace{0.5cm} \\text{for} \\hspace{0.1cm} k = 0, 1, 2, \\dots, \\infty \\\\\n",
     "    f &= k \\Delta f\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "<br>\n",
     "\n",
@@ -124,10 +125,10 @@
     "\n",
     "When we multiply the time-series by a rectangular window in the time-domain, this corresponds to a convolution in the frequency domain between the continuous-time spectrum of the time-series signal, which we denote as $X(f)$, and the continuous-time spectrum of the rectangular window, $W_{R}(f)$. We'll cover convolution in a later notebook, so for now we're only interested in the result (not how we got there). At some frequency corresponding to $f = k\\Delta f$, this convolution is mathematically given as\n",
     "\n",
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "X[k] &= \\int \\limits_{-f_{s}/2} ^{f_s/2} X(f) W_{R}(f - k\\Delta f) df \\\\\n",
     "     &= \\int \\limits_{-f_{s}/2} ^{f_s/2} X(f)  \\text{sinc}\\left(\\frac{\\pi (f - k\\Delta f)}{\\Delta f}\\right) df \n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "The term, $W_{R}(f - k\\Delta f)$ is simply the same sinc function we derived before, except that for different values of $k$, it is shifted such that the maximum of the sinc function will occur at frequencies, $f = k\\Delta f$. This means that it is precisely this sinc function which is acting as our effective bin filter (not the ideal filter with an infinitely steep roll-off as we started thinking about). Therefore what this equation is telling us is that the sampling of the continuous-time frequency spectrum occurs as follows: for each frequency bin, $k$, (i) the sinc function is repositioned so its maximum (of 1) occurs at that bin, (ii) the sinc function is then multiplied with the continuous-time spectrum, $X(f)$, and (iii) finally the product is integrated (summed) from frequencies $-f_s/2$ to $f_s/2$ (equivalently this could be from $0$ to $f_s$, but that's just a matter of how we define the symmetry of the Fourier transform, in this case it was mathematically more convenient to make that around zero).\n",
     "\n",
@@ -605,34 +606,34 @@
     "\n",
     "Let's denote the windowed time-domain signal as $y[n]$ for $n=0,1,2, \\dots, N-1$ as\n",
     "\n",
-    "$\\begin{equation}\n",
+    "$$\\begin{equation}\n",
     "y[n] = w[n] x[n]\n",
-    "\\end{equation}$\n",
+    "\\end{equation}$$\n",
     "\n",
     "where $w[n]$ is the window and $x[n]$ is the original time-domain signal. From the energy equivalence relationship of the PSD, we know that\n",
     "\n",
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "\\sum\\limits_{k=0}^{N/2}G_{yy}[k] \\Delta f &= \\frac{1}{N} \\sum\\limits_{n=0}^{N-1} y[n]^{2} \\\\\n",
     "                                          &= \\frac{1}{N} \\sum\\limits_{n=0}^{N-1} w[n]^{2} x[n]^{2}\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "where $G_{yy}[k]$ for $k=0, 1, 2, \\dots N/2$ is the single-sided PSD of $y[n]$. But we would like to obtain a correction factor, $A_{w}$, such that we establish the following energy equivalence with $x[n]$:\n",
     "\n",
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "A_{w} \\sum\\limits_{k=0}^{N/2}G_{yy}[k] \\Delta f &= \\frac{1}{N} \\sum\\limits_{n=0}^{N-1} x[n]^{2} \n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "And hence the correction factor $A_{w}$ is\n",
     "\n",
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "A_{w}  &= \\frac{1}{\\sum\\limits_{k=0}^{N/2}G_{yy}[k] \\Delta f} \\frac{1}{N} \\sum\\limits_{n=0}^{N-1} x[n]^{2} = \\frac{\\sum\\limits_{n=0}^{N-1} x[n]^{2}}{\\sum\\limits_{n=0}^{N-1} w[n]^{2} x[n]^{2}}\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "In the case where $x[n]$ is a stationary signal, i.e., $x[n]$ is a constant, the correction factor then reduces to\n",
     "\n",
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "A_{w}  &= \\frac{N}{\\sum\\limits_{n=0}^{N-1} w[n]^{2}}\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "Although the first expression for $A_{w}$ can accomodate for time-varying signals, much of the acoustic signal processing community nevertheless uses the simpler PSD correction factor assuming $x[n]$ is a constant. Although this can give erroneous results for certain types of signals, it is nevertheless widely employed (it is something to think about when you are using it in practice). At any rate, let's define a new PSD function with this correction factor and see if this helps! Have a look at the plots below and see if the energy equivalence now holds regardless of the frequency of the sine wave."
    ]
@@ -844,28 +845,29 @@
     "\n",
     "Let's denote a window in the continuous-time domain as $w(t)$ of length $T$ seconds. The continuous-time Fourier transform of $w(t)$ is given by\n",
     "\n",
-    "$\\begin{equation}\n",
+    "$$\\begin{equation}\n",
     "W(f) = \\int_{0}^{T} w(t) e^{j 2\\pi f t} dt\n",
-    "\\end{equation}$\n",
+    "\\end{equation}$$\n",
     "\n",
     "The peak gain of $W(f)$ is given at $f = 0$ Hz, so that\n",
-    "$\\begin{equation}\n",
+    "\n",
+    "$$\\begin{equation}\n",
     "W(0) = \\int_{0}^{T} w(t) dt\n",
-    "\\end{equation}$\n",
+    "\\end{equation}$$\n",
     "\n",
     "which is the amplitude of the ideal rectangular filter. In the discrete-time domain, $\\int_{0}^{T} w(t) dt = \\sum_{n=0}^{N-1} w[n] \\Delta t$ (where we recall $\\Delta t = 1/f_{s}$). And for Parseval's energy equivalence to hold, we would require that\n",
     "\n",
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "W^{2}(0) \\Delta f_{ENB} &= \\sum_{n=0}^{N-1} w^{2}[n] \\Delta t \\\\\n",
     "         \\Delta f_{ENB} &= \\frac{1}{W^{2}(0)}\\sum_{n=0}^{N-1} w^{2}[n] \\Delta t \\\\\n",
     "                        &= \\frac{\\sum\\limits_{n=0}^{N-1} w^{2}[n]}{\\left(\\sum\\limits_{n=0}^{N-1} w[n]^{2}\\right)\\Delta t}\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "With this equivalent noise bandwidth, now we can estimate the RMS of the sine wave as\n",
     "\n",
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "\\text{RMS of sine wave} = \\sqrt{ G_{xx}[k_o] \\hspace{0.1cm} \\Delta f_{ENB}}\n",
-    "\\end{align}$\n",
+    "\\end{align}$$\n",
     "\n",
     "Let's do this calculation and see how well it works for the different windows. We'll plot again the various filter shapes and the equivalent noise bandwidths (dotted grey lines) for the different windows to that this all ties together. "
    ]
