--- a/book/fundamental/09_Time_Freq_Analysis.ipynb
+++ b/book/fundamental/09_Time_Freq_Analysis.ipynb
@@ -70,15 +70,17 @@
     "\n",
     "Fig. 2 depicts the processing steps to obtain the STFT representation starting from the discrete-time domain signal, $x[n]$ in the upper-most plot. In the second step, $x[n]$ is segmented into fixed-length overlapping frames each consisting of $N$ samples. Each time frame is then multiplied by a window, $w[n]$ as depicted in the second row of Fig. 2. Moving to the third row of Fig. 2, the $l^{th}$ windowed time frame can be mathematically defined as\n",
     "\n",
-    "\\begin{equation}\n",
+    "$$\\begin{equation}\n",
     "     \\bar{x} [n, l] = x[n + lR]  w[n]\n",
-    "\\end{equation}\n",
+    "\\end{equation}$$\n",
+    "\n",
     "for $n =  [0, 1, . . . , N − 1]$,  $l = [0, 1, . . . , L − 1]$, where L is the total number of time frames, and R is the hop-size in samples. R directly defines the amount of overlap between frames, so for instance, if R = 256 and P = 512, then the amount of overlap is defined as 50%.\n",
     "\n",
     "The final step of the STFT then involves taking a discrete Fourier transform (DFT) on each of these windowed time frames,  $\\bar{x} [n, l]$, which yields complex-valued STFT coefficients:\n",
-    "\\begin{equation}\n",
+    "\n",
+    "$$\\begin{equation}\n",
     "X(k,l) = \\sum_{n=0}^{N-1} \\bar{x} [n, l] e^{-j 2\\pi \\frac{n k}{N}}\n",
-    "\\end{equation}\n",
+    "\\end{equation}$$\n",
     "\n",
     "where $k =  [0, 1, . . . , N − 1]$ is the frequency bin corresponding to the specific frequency (Hz), $f = \\frac{k f_s}{N}$, where $f_s$ is the sampling frequency (Hz). With this, we now have the complex values $X(k,l)$ that can be assembled as per the matrix/tile type representation as shown on the right-hand-side illustration of Fig. 1.\n",
     "\n",
@@ -177,9 +179,9 @@
     "\n",
     "One of the parameters we need to choose before computing the STFT however, is the length of the time frames, $N$ (i.e. the number of samples over which we compute the DFT, see Fig. 2). Recalling our previous formula for the frequency, $f = kf_{s}/N$, for $k =  [0, 1, . . . , N − 1]$, we can define the frequency resolution, i.e. the spacing between each freuqency bin as:\n",
     "\n",
-    "\\begin{equation}\n",
+    "$$\\begin{equation}\n",
     "\\Delta f = \\frac{f}{k} = \\frac{f_{s}}{N}\n",
-    "\\end{equation}\n",
+    "\\end{equation}$$\n",
     "\n",
     "This equation tells us that we can essentially increase our frequency resolution by reducing the sampling frequency, $f_s$ or by increasing the number of of samples in each time frame, $N$. However, by increasing $N$, this will reduce the temporal resolution as each time frame will now be separated by more time, and hence fast, transient events may become difficult to visualize. This is the inherent time-frequency resolution trade-off that is encountered with the STFT, i.e. as frequency resolution increases, temporal resolution decreases and vice versa.\n",
     "\n",
